Deleted div from Body in index.html + Created countdown Function in countdown.js file

--- a/countdown/index.html
+++ b/countdown/index.html
@@ -9,6 +9,6 @@
     <script src="countdown.js" defer></script>
 </head>
 <body>
-    <h1>COUNTDOWN TIMER</h1>
+    <h1>HALLOWEEN</h1>
 </body>
 </html>
