Added SetInterval Method in countdown.js File with Countdown Function for 1000 Secs + Modified index.html File with Div Containers for Days, Hours, Mins, Secs

--- a/countdown/index.html
+++ b/countdown/index.html
@@ -10,5 +10,26 @@
 </head>
 <body>
     <h1>HALLOWEEN</h1>
+
+    <div class="countdown-container">
+
+        <div class="days-container">
+            <p class="big-text" id="days"></p>
+            <span>Days</span>
+        </div>
+        <div class="hours-container">
+            <p class="big-text" id="hours"></p>
+            <span>Hours</span>
+        </div>
+        <div class="mins-container">
+            <p class="big-text" id="mins"></p>
+            <span>Minutes</span>
+        </div>
+        <div class="secs-container">
+            <p class="big-text" id="secs"></p>
+            <span>Seconds</span>
+        </div>
+
+    </div>
 </body>
 </html>
