Fixed Syntax Error in countdown.js File + Added Styling to style.css File + Modified Class Name in index.html File

--- a/countdown/index.html
+++ b/countdown/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Timer</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="countdown.js" defer></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Countdown Timer</title>
+        <link rel="stylesheet" href="style.css" />
+        <script src="countdown.js" defer></script>
 </head>
 <body>
     <h1>HALLOWEEN</h1>
-
+    
     <div class="countdown-container">
-
-        <div class="days-container">
-            <p class="big-text" id="days"></p>
+        <div class="countdown-el">
+            <p class="big-text" id="day">0</p>
             <span>Days</span>
         </div>
-        <div class="hours-container">
-            <p class="big-text" id="hours"></p>
+        <div class="countdown-el">
+            <p class="big-text" id="hour">0</p>
             <span>Hours</span>
         </div>
-        <div class="mins-container">
-            <p class="big-text" id="mins"></p>
+        <div class="countdown-el">
+            <p class="big-text" id="min">0</p>
             <span>Minutes</span>
         </div>
-        <div class="secs-container">
-            <p class="big-text" id="secs"></p>
+        <div class="countdown-el">
+            <p class="big-text" id="sec">0</p>
             <span>Seconds</span>
         </div>
-
     </div>
 </body>
 </html>
